# ADA-FFT-Audio

./: .gitignore  CMakeLists.txt  README.md  main.cpp
audio/: AudioReader.cpp  AudioReader.h  LectorAudio.cpp  LectorAudio.h
src/: main.cpp
src/audio/: LectorAudio.cpp  LectorAudio.h
src/busqueda/: BuscadorCanciones.cpp  BuscadorCanciones.h  SistemaVotacion.cpp  SistemaVotacion.h
src/fft/: FFT.cpp  FFT.h
src/indexacion/: BaseDatosHashes.cpp  BaseDatosHashes.h  IndiceInvertido.cpp  IndiceInvertido.h
src/procesamiento/: DetectorPicos.cpp  DetectorPicos.h  Espectrograma.cpp  Espectrograma.h  GeneradorHashes.cpp  GeneradorHashes.h
src/utilidades/: NumeroComplejo.h
src/utils/: NumeroComplejo.cpp
tests/Fase1/: resultados_fft.txt
tests/Fase2/: bandas_frecuencia.csv
tests/Fase3/: picos_bandas.csv  picos_completos.csv
tests/Fase4/: constelacion.txt
tests/Fase5/: fingerprints.csv
tests/Fase6/: mi_db_metadata.txt
